<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.firebase.quickstart.database.NewPostActivity">

    <EditText
        android:id="@+id/field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="Title"
        android:maxLines="1" />

    <EditText
        android:id="@+id/field_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_title"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:hint="Author"
        android:maxLines="1"
        android:scrollHorizontally="false" />

    <EditText
        android:id="@+id/field_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/field_isbn"
        android:layout_alignStart="@+id/field_isbn"
        android:layout_below="@+id/field_isbn"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />

    <EditText
        android:id="@+id/field_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/field_author"
        android:layout_alignStart="@+id/field_author"
        android:layout_below="@+id/field_author"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:hint="ISBN"
        android:maxLines="1"
        android:scrollHorizontally="false" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_navigation_check_24"/>

    <RadioButton
        android:id="@+id/radio_sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab_submit_post"
        android:layout_alignLeft="@+id/field_description"
        android:layout_alignStart="@+id/field_description"
        android:text="Sell" />

    <RadioButton
        android:id="@+id/radio_swap_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radio_sell_button"
        android:layout_alignBottom="@+id/radio_sell_button"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/radio_sell_button"
        android:layout_toRightOf="@+id/radio_sell_button"
        android:text="Swap" />

</RelativeLayout>
