...
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/post_author_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/book_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/post_text_layout"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
...
